# nevermail-core

./: CLAUDE.md  Cargo.toml
src/: config.rs  imap.rs  keyring.rs  lib.rs  mime.rs  models.rs  setup.rs  smtp.rs
src/store/: commands.rs  flags.rs  handle.rs  mod.rs  queries.rs  schema.rs
tests/fixtures/: 1password_invoice_html.txt  1password_invoice_plain.txt
