[package]
name = "nevermail-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Headless email engine for Nevermail"

[dependencies]
# Mail engine
melib = { version = "0.8", default-features = false, features = ["sqlite3", "imap"] }
indexmap = { version = "2", features = ["serde"] }
futures = { workspace = true }

# SMTP sending
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# HTML rendering (privacy-safe sanitization)
html-safe-md = { version = "0.0.1" }

# Local cache
rusqlite = { version = "0.37", features = ["bundled"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Credential storage
keyring = { version = "3", features = ["sync-secret-service"] }

# XDG directory resolution
dirs = { workspace = true }

# Open URLs in browser
open = "5"

# UUID generation for account IDs
uuid = { version = "1", features = ["v4"] }

# Logging
log = { workspace = true }
