[package]
name = "neverlight-mail-core"
version = "0.0.6"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Headless email engine for Neverlight Mail"
repository = "https://github.com/jstelzer/neverlight-mail-core"
homepage = "https://github.com/jstelzer/neverlight-mail-core"
documentation = "https://docs.rs/neverlight-mail-core"

[dependencies]
# Mail engine
melib = { version = "0.8", default-features = false, features = ["sqlite3", "imap"] }
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"

# SMTP sending
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# HTML rendering (privacy-safe sanitization)
html-safe-md = { version = "0.0.1" }

# Local cache
rusqlite = { version = "0.37", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Credential storage
keyring = { version = "3", features = ["sync-secret-service", "apple-native"] }

# XDG directory resolution
dirs = "6"

# Open URLs in browser
open = "5"

# UUID generation for account IDs
uuid = { version = "1", features = ["v4"] }

# Logging
log = "0.4"
